# image-extractor-cli

./: README.md  pyproject.toml  requirements.txt
image_extractor/: __init__.py  __main__.py  cli.py
image_extractor/handlers/: __init__.py  base.py  docx_handler.py  pdf_handler.py  pptx_handler.py
image_extractor/utils/: __init__.py  image_processing.py
tests/: __init__.py  test_pdf_extractor.py
